# leadpoet-sn71

./: .dockerignore  .gitignore  LICENSE  README.md  SN71-LeadPoet-Mining-Guide.md  START-HERE.md  crawler_4ai_api.py  env.example  pcr0_allowlist.json  requirements-hf.txt  run-miner-with-log.sh  run-miner.sh  setup.py
Leadpoet/: protocol.py
docs/: AVOID-REJECTIONS.md  HUGGINGFACE-MODELS-FOR-LEAD-QUALITY.md  MINER_PIPELINE-DIAGRAM.md  MULTI-MINER-SETUP.md  QUALIFICATION-AND-TERMS.md  RUN_BOOK_with-commands.md  WORKFLOW-WITH-CODE.md  can_spam_email_footer.html  contributor_terms.md  privacy_policy.md  takedown_process.md
gateway/: .dockerignore  Dockerfile  TRUSTLESS_GATEWAY.md  __init__.py  config.py  main.py
leadpoet_audit/: __init__.py  analyzer.py  cli.py  downloader.py
leadpoet_canonical/: __init__.py  binding.py  chain.py  constants.py  events.py  nitro.py  timestamps.py  weights.py
miner_models/lead_sorcerer_main/: Makefile  README.md  env.template  icp_config.json  icp_config.leadpoet_high_yield_backup.json  main_leads.py  pyproject.toml  requirements.txt
miner_models/lead_sorcerer_main/config/: costs.yaml  dental_example_icp.json
miner_models/lead_sorcerer_main/config/prompts/: base_contact_selection.txt  enterprise_contact_selection.txt  healthcare_contact_selection.txt  investment_contact_selection.txt  technology_contact_selection.txt
miner_models/lead_sorcerer_main/schemas/: extended_icp_config.json  unified_lead_record.json
miner_models/lead_sorcerer_main/src/: common.py  crawl.py  domain.py  orchestrator.py  page_discovery.py
(+978 files in other folders)
