[tool.poetry]
name = "lead-sorcerer"
version = "0.1.0"
description = "Comprehensive lead generation system"
authors = ["Lead Sorcerer Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.27.0"
openrouter = "^0.1.0"
firecrawl = "^0.1.0"
openai = "^1.0.0"

phonenumbers = "^8.13.0"
portalocker = "^2.7.0"
publicsuffix2 = "^2.20191221"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
pre-commit = "^3.3.0"
jsonschema = "^4.17.0"

[tool.poetry.scripts]
domain = "src.domain:main"
crawl = "src.crawl:main"
orchestrator = "src.orchestrator:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
multi_line_output = 3

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"
asyncio_mode = "auto"
